--- a/homeworkwk9/chessMap.html
+++ b/homeworkwk9/chessMap.html
@@ -35,29 +35,28 @@
           "lookup": "properties.NAME",
           "from": {
             "data": {
-              "url": "https://raw.githubusercontent.com/FIT3179/Vega-Lite/main/3_choropleth_map/data/covid_10_10_2020.csv"
+              "url": "https://raw.githubusercontent.com/rche0049/3179/main/homeworkwk9/International_Chess_Stats.csv"
             },
             "key": "Country",
-            "fields": ["Active", "Confirmed", "Population"]
+            "fields": ["FIDEAverage"]
           }
         },
-        { "calculate" : "datum.Confirmed/datum.Population * 10000" , "as" : "Confirmed per 10,000 population" }
+        { "calculate" : "datum.FIDEAverage", "as": "FIDEAverage"  }
       ],
       "mark": {"type": "geoshape", "stroke": "white"},
       "encoding": {
         "color": {
-          "field": "Confirmed per 10,000 population",
+          "field": "FIDEAverage",
           "type": "quantitative",
           "scale": {
-            "type": "threshold",
-            "domain": [1, 10, 100],
+            "type": "quantitative",
+            "domain": [0, 3000],
             "range": ["#fdbe85", "#fd8d3c", "#e6550d", "#a63603"]
           }
         },
         "tooltip": [
           {"field": "properties.NAME", "type": "nominal", "title": "Country"},
-          {"field": "Active", "type": "quantitative"},
-          {"field" : "Confirmed per 10,000 population" , "type" : "quantitative" , "format" : ".2f" }
+          {"field": "FIDEAverage", "type": "quantitative", "format": ".2f", "title": "FIDE Rating"} 
         ]
       }
     }
