--- a/homeworkwk9/chessMap.html
+++ b/homeworkwk9/chessMap.html
@@ -10,7 +10,7 @@
   <script>
     const spec = {
   "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
-  "title": "Average Country FIDE Rating (2022)",
+  "title": "Global Average FIDE Chess Rating by Country (2022)",
   "width": 800,
   "height": 500,
   "data": {
@@ -50,13 +50,16 @@
           "type": "quantitative",
           "scale": {
             "type": "quantitative",
-            "domain": [1000, 2300],
-            "range": ["#fdbe85", "#fd8d3c", "#e6550d", "#a63603"]
+            "domain": [1000,1300,1600,1900,2100,2400],
+            "range": ["#9BDEA6", "#81C784", "#56A953", "#1E6B27"]
+
+
+
           }
         },
         "tooltip": [
           {"field": "properties.NAME", "type": "nominal", "title": "Country"},
-          {"field": "FIDEAverage", "type": "quantitative", "format": ".2f", "title": "FIDE Rating"} 
+          {"field": "FIDEAverage", "type": "quantitative",  "title": "Average FIDE Rating"} 
         ]
       }
     }
