website updates and new files

--- a/index.html
+++ b/index.html
@@ -17,35 +17,48 @@
   <div class = "intro">
     <div class = "content">
       <h3>The Chess Craze: From Novices to Grandmasters</h3>
-      <p>In recent years, chess has witnessed a significant surge in popularity, emerging as a strategic and intellectually engaging pastime for millions around the globe. </p>
-        <p>As a result of its soaring popularity, competitive chess has become an increasingly prominent pursuit. Governed by the Fédération Internationale des Échecs (FIDE), 
-          FIDE has become the norm, the legitimizing body, and the primary rating system. The FIDE rating system has played a pivotal role in evaluating players' skills and providing a 
-          standardized measure of their prowess, from aspiring novices to seasoned grandmasters.</p>
-          <p>What's fascinating is the diverse demographic landscape of chess enthusiasts, reflecting a blend of cultures, genders, and age brackets. This inclusivity is reshaping the chess community and making it more accessible than ever, 
-            ensuring that the ancient game continues to thrive as a competitive and intellectually stimulating pursuit.
-      </p>
+      <p>In recent years, chess has gained immense popularity, becoming a strategic and intellectually engaging pastime for millions worldwide.</p>
+      <p>Competitive chess, overseen by Fédération Internationale des Échecs (FIDE), is on the rise, with FIDE being the primary authority and rating system. FIDE ratings provide a standardized measure of players' skills, ranging from novices to grandmasters.</p>
+      <p>What's fascinating is chess's diverse fanbase, comprising individuals from various cultures, genders, and age groups. This inclusivity is transforming the chess community, making it more accessible and ensuring the ancient game thrives as a competitive and intellectually stimulating pursuit.</p>
+      
     </div>
+    <figure>
     <img src="chess_in_park.png" alt="people playing chess in park">
+    <figcaption><strong>Figure 1 </strong>Several people gathered in a park to play chess</figcaption>
+    </figure>
   </div>
   <!-- map -->
   <div class = "map">
     <h3>Global Average FIDE Chess Rating by Country (2022)</h3>
   <div id="vis"></div>
-  <p class="figure"><strong>Figure 1</strong> World map of country FIDE ratings</p>
+  <figure><figcaption><strong>Figure 2</strong> World map of country FIDE ratings</figcaption></figure>
 </div>
   <!-- total gm bar chart --> 
   <div class = "totaltitles">
     <div class = "content">
-      <h3>The Chess Craze: From Novices to Grandmasters</h3>
-      <p>In recent years, chess has witnessed a significant surge in popularity, emerging as a strategic and intellectually engaging pastime for millions around the globe. </p>
-        <p>As a result of its soaring popularity, competitive chess has become an increasingly prominent pursuit. Governed by the Fédération Internationale des Échecs (FIDE), 
-          FIDE has become the norm, the legitimizing body, and the primary rating system. The FIDE rating system has played a pivotal role in evaluating players' skills and providing a 
-          standardized measure of their prowess, from aspiring novices to seasoned grandmasters.</p>
-          <p>What's fascinating is the diverse demographic landscape of chess enthusiasts, reflecting a blend of cultures, genders, and age brackets. This inclusivity is reshaping the chess community and making it more accessible than ever, 
-            ensuring that the ancient game continues to thrive as a competitive and intellectually stimulating pursuit.
-      </p>
+      <h3>Russia's Chess Renaissance</h3>
+    <p>Chess titles are a testament to a player's skill and dedication within the world of chess, representing a recognition of exceptional talent, hard work, and strategic thinking. 
+      <p>Russia, with its enduring love for chess, has consistently been a prolific producer of titled players. This remarkable
+       phenomenon is deeply intertwined with the nation's historical connection to chess. Rooted in the legacy of the Soviet Union, 
+       chess in Russia has been nurtured by a unique blend of historical factors.</p> During times of economic hardship and poverty, chess became a 
+       means of intellectual exploration and personal expression for many. The pursuit of chess titles provided not only a platform for showcasing strategic genius but also a 
+       path to distinction in a society that highly valued intellectual achievement.<p> During the Soviet era, chess evolved beyond a mere recreational pursuit, transforming into a fiercely competitive 
+       discipline that extended its reach across international boundaries. Prominent Russian Grandmasters like Anatoly Karpov and Garry Kasparov, exemplified the nation's passion for chess. <p>The support 
+       for chess from the government and society's appreciation for intellectual endeavors combined to create an environment where chess flourished. As a result, Russia consistently produced an 
+       impressive number of Grandmasters (GMs), International Masters (IMs), and other titled individuals. This unique blend of history, intellectual curiosity, and societal encouragement has solidified 
+       Russia's position as a chess powerhouse, leaving an indelible mark on the world of chess titles.</p>
+    </p>
     </div>
-    <div id="stacked_bar_chart"></div>
+    <div class="charts">
+      <figure>
+      <div id="stacked_bar_chart"></div>
+      <figcaption><strong>Figure 3</strong> Top 10 countries based on total titled players</figcaption>
+    </figure>
+    <figure>
+      <div id="bar_chart"></div>
+      <figcaption><strong>Figure 4</strong> Countries with most grandmasters</figcaption>
+    </figure>
+    </div>
     </div>
   <!-- total gm bar chart --> 
   <div class = "item_container">
@@ -56,7 +69,7 @@
 </div>
   <footer class="footer-bar">
     <!-- Footer content goes here -->
-    <p>&copy; 2023 Your Website</p>
+    <p>&copy; 2023. Raymond Chen. This website was made for educational purposes only</p>
   </footer>
 </div>
   <script>
