format data test

--- a/index.html
+++ b/index.html
@@ -67,6 +67,19 @@
   <!-- rating vs age heat map -->
   <div id="heat_map"></div>
 </div>
+  <!-- Dropdown to select the country -->
+  <div>
+    <label for="country-dropdown">Select Country:</label>
+    <select id="country-dropdown">
+      <option value="Russia">Russia</option>
+      <option value="India">India</option>
+      <option value="Germany">Germany</option>
+      <!-- Add more countries as needed -->
+    </select>
+  </div>
+
+  <!-- Container for the pie chart -->
+  <div id="gender-pie-chart"></div>
   <footer class="footer-bar">
     <!-- Footer content goes here -->
     <p>&copy; 2023. Raymond Chen. This website was made for educational purposes only</p>
