--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div id="vis"></div>
   <figure><figcaption><strong>Figure 2</strong> World map of country FIDE ratings</figcaption></figure>
 </div>
-  <!-- total gm bar chart --> 
+  <!-- titles section --> 
   <div class = "totaltitles">
     <div class = "content">
       <h3>Russia's Chess Renaissance</h3>
@@ -60,26 +60,33 @@
     </figure>
     </div>
     </div>
-  <!-- total gm bar chart --> 
-  <div class = "item_container">
-  <div id="bar_chart"></div>
-  </div>
-  <!-- rating vs age heat map -->
-  <div id="heat_map"></div>
-</div>
-  <!-- Dropdown to select the country -->
-  <div>
-    <label for="country-dropdown">Select Country:</label>
-    <select id="country-dropdown">
-      <option value="Russia">Russia</option>
-      <option value="India">India</option>
-      <option value="Germany">Germany</option>
-      <!-- Add more countries as needed -->
-    </select>
-  </div>
-
-  <!-- Container for the pie chart -->
-  <div id="gender-pie-chart"></div>
+  <!-- demographic section --> 
+  <div class = "totaltitles">
+    <div class = "content">
+      <h3>Russia's Chess Renaissance</h3>
+    <p>Chess titles are a testament to a player's skill and dedication within the world of chess, representing a recognition of exceptional talent, hard work, and strategic thinking. 
+      <p>Russia, with its enduring love for chess, has consistently been a prolific producer of titled players. This remarkable
+       phenomenon is deeply intertwined with the nation's historical connection to chess. Rooted in the legacy of the Soviet Union, 
+       chess in Russia has been nurtured by a unique blend of historical factors.</p> During times of economic hardship and poverty, chess became a 
+       means of intellectual exploration and personal expression for many. The pursuit of chess titles provided not only a platform for showcasing strategic genius but also a 
+       path to distinction in a society that highly valued intellectual achievement.<p> During the Soviet era, chess evolved beyond a mere recreational pursuit, transforming into a fiercely competitive 
+       discipline that extended its reach across international boundaries. Prominent Russian Grandmasters like Anatoly Karpov and Garry Kasparov, exemplified the nation's passion for chess. <p>The support 
+       for chess from the government and society's appreciation for intellectual endeavors combined to create an environment where chess flourished. As a result, Russia consistently produced an 
+       impressive number of Grandmasters (GMs), International Masters (IMs), and other titled individuals. This unique blend of history, intellectual curiosity, and societal encouragement has solidified 
+       Russia's position as a chess powerhouse, leaving an indelible mark on the world of chess titles.</p>
+    </p>
+    </div>
+    <div class="charts">
+      <figure>
+      <div id="heat_map"></div>
+      <figcaption><strong>Figure 3</strong> Top 10 countries based on total titled players</figcaption>
+    </figure>
+    <figure>
+      <div id="pie_chart"></div>
+      <figcaption><strong>Figure 4</strong> Countries with most grandmasters</figcaption>
+    </figure>
+    </div>
+    </div>
   <footer class="footer-bar">
     <!-- Footer content goes here -->
     <p>&copy; 2023. Raymond Chen. This website was made for educational purposes only</p>
