nearly done website

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
   <header class="header-bar">
     <!-- Header -->
+    <img src="logo.png" class="logo-image">
     <h1>The world of chess</h1>
+   
+    <img src="design.png" class="design-image">
+
   </header>
   <div id="container">
   <!-- intro text -->
@@ -24,7 +28,7 @@
     </div>
     <figure>
     <img src="chess_in_park.png" alt="people playing chess in park">
-    <figcaption><strong>Figure 1 </strong>Several people gathered in a park to play chess</figcaption>
+    <figcaption><strong>Figure 1 </strong>Several people gathered in the park to play chess</figcaption>
     </figure>
   </div>
   <!-- map -->
@@ -52,7 +56,7 @@
     <div class="charts">
       <figure>
       <div id="stacked_bar_chart"></div>
-      <figcaption><strong>Figure 3</strong> Top 10 countries based on total titled players</figcaption>
+      <figcaption><strong>Figure 3</strong> Countries with most titled players</figcaption>
     </figure>
     <figure>
       <div id="bar_chart"></div>
@@ -63,27 +67,31 @@
   <!-- demographic section --> 
   <div class = "totaltitles">
     <div class = "content">
-      <h3>Russia's Chess Renaissance</h3>
-    <p>Chess titles are a testament to a player's skill and dedication within the world of chess, representing a recognition of exceptional talent, hard work, and strategic thinking. 
-      <p>Russia, with its enduring love for chess, has consistently been a prolific producer of titled players. This remarkable
-       phenomenon is deeply intertwined with the nation's historical connection to chess. Rooted in the legacy of the Soviet Union, 
-       chess in Russia has been nurtured by a unique blend of historical factors.</p> During times of economic hardship and poverty, chess became a 
-       means of intellectual exploration and personal expression for many. The pursuit of chess titles provided not only a platform for showcasing strategic genius but also a 
-       path to distinction in a society that highly valued intellectual achievement.<p> During the Soviet era, chess evolved beyond a mere recreational pursuit, transforming into a fiercely competitive 
-       discipline that extended its reach across international boundaries. Prominent Russian Grandmasters like Anatoly Karpov and Garry Kasparov, exemplified the nation's passion for chess. <p>The support 
-       for chess from the government and society's appreciation for intellectual endeavors combined to create an environment where chess flourished. As a result, Russia consistently produced an 
-       impressive number of Grandmasters (GMs), International Masters (IMs), and other titled individuals. This unique blend of history, intellectual curiosity, and societal encouragement has solidified 
-       Russia's position as a chess powerhouse, leaving an indelible mark on the world of chess titles.</p>
-    </p>
+      <h3>A New Era of Diversity and Inclusivity</h3>
+    <p>In the world of chess, the age brackets synonymous with the highest player ratings often extend from 
+      the early twenties to the late thirties. It's during this period that chess players exhibit 
+      remarkable strategic prowess and a deep commitment to the game. Their wealth of experience and 
+      unwavering commitment converge to produce extraordinary skills that can dominate the chessboard. 
+      <p>Nonetheless, chess has faced a persistent gender gap, historically featuring more male players than 
+      their female counterparts. Recent times have ushered in a positive change, with increasing numbers 
+      of women and girls finding inspiration in the popular Netflix show 'The Queen's Gambit' and venturing into the world of chess. 
+      </p>The increasing enthusiasm among women for chess is shattering long-standing barriers and infusing 
+      the chess community with new viewpoints and inventive tactics for the game's future. As women continue to advance in 
+      the world of chess, they not only champion the cause of gender equality but also enhance the chess 
+      landscape by introducing elements of diversity and inclusivity. This change is a testament to the 
+      evolving dynamics of the chess world, proving that talent and strategic brilliance know no gender 
+      boundaries. <p>With the increased involvement of women in chess, the game's future holds the promise 
+      of more creative and nuanced approaches, with players from all backgrounds contributing to the 
+      game's growth and evolution.</p>
     </div>
     <div class="charts">
       <figure>
       <div id="heat_map"></div>
-      <figcaption><strong>Figure 3</strong> Top 10 countries based on total titled players</figcaption>
+      <figcaption><strong>Figure 5</strong> Average rating of player age brackets</figcaption>
     </figure>
     <figure>
       <div id="pie_chart"></div>
-      <figcaption><strong>Figure 4</strong> Countries with most grandmasters</figcaption>
+      <figcaption><strong>Figure 6</strong> Proportion of male and female players from each country</figcaption>
     </figure>
     </div>
     </div>
