--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
   <header class="header-bar">
     <!-- Header -->
-    <img src="logo.png" class="logo-image">
+    <img src="logo.png">
     <h1>The world of chess</h1>
    
-    <img src="design.png" class="design-image">
+    <img src="design.png">
 
   </header>
   <div id="container">
